[package]
name = "digital-angel"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-timers = "0.1.4"
rodio = { version = "0.18.0", features = ["wav"] }
tokio = {version = "1", features = ["full"]}
